<resources>
    <string name="app_name">Seguridadallimiteevaluacion</string>
    <string name="hint_numerodocumento">Número de documento</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="text_logo">Capacitación en alturas</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Evaluación</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolbar_title_hom">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Examen de conocimientos teóricos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_quiz_aprendiz">QuizAprendizActivity</string>
    <string name="texto_inicion_Quiz">Pon a prueba tu aprendizaje del componente teórico</string>
    <string name="quiz_texto1">Este examen tiene 10 preguntas para responder en 30 minutos</string>
    <string name="quiz_texto2">Este examen puede presentarse hasta dos veces</string>
    <string name="quiz_texto3">Debe aprobar el 80% de las preguntas</string>
    <string name="quiz_boton_iniciar_ecamen">Iniciar examen</string>
    <string name="title_activity_quizteorico">Quizteorico</string>
    <string name="title_activity_evaluacionpractica">EvaluacionpracticaActivity</string>
</resources>
